<resources>
    <string name="app_name">MyDeal</string>

    <!-- For the best practices string values in the string.xml file.-->

    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_an_account">Create new account?</string>
    <string name="register">
        <u>Register</u>
    </string>


    <string name="create_an_account">CREATE AN ACCOUNT</string>

    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="et_hint_confirm_password">Confirm Password</string>

    <string name="i_agree_to_the_terms_and_condition">I Agree To The
        <u>Terms &amp; Condition</u>
    </string>
    <string name="btn_lbl_register">Register</string>

    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">
        <u>Login</u>
    </string>

    // strings for validation of input
    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name.</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password does not match.</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and condition.</string>
    <string name="register_successful">registration is successful</string>
    //strings for load
    <string name="loading">loading</string>
    //forget password layout
    <string name="title_forgot_password">FORGOT PASSWORD?</string>
    <string name="forgot_password_title_description">Enter your e-mail we\'ll send you a link to reset your password
    </string>
    <string name="btn_lbl_submit">Submit</string>
    <string name="email_url_sent">Email sent successfully to your email.</string>
    // Profile Info
    <string name="title_complete_profile">UPDATE PROFILE</string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">Male</string>
    <string name="rb_lbl_female">Female</string>
    <string name="btn_lbl_save">Save</string>
    <string name="read_storage_permission_denied">Permission denied.Please Allow it first</string>
    <string name="err_msg_enter_phone_number">Enter your phone number.</string>
    <string name="image_selection_failed">Image selection failed!</string>
    <string name="msg_profile_update_success">Profile Updated successfully</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="click_back_again_to_exit">Click back again to exit</string>

    <string name="title_products">Products</string>
    <string name="title_orders">Orders</string>
    <string name="action_setting">Settings</string>
    <string name="title_settings">Settings</string>
    <string name="btn_lbl_logout">Log Out</string>
    <string name="lbl_addresses">Address</string>
    <string name="lbl_edit">Edit</string>
    <string name="title_edit_profile">EDIT PROFILE</string>
    <string name="action_add_product">Add an Item</string>

    //for item page
    <string name="text_add_item">Add Item</string>
    <string name="text_item_title">Item Title</string>
    <string name="text_price">Price (Lv)</string>
    <string name="text_item_description">Description</string>
    <string name="text_stock_number">Stock Quantity</string>
    <string name="err_msg_select_item_image">Please select an image</string>
    <string name="err_msg_enter_item_title">Enter item title</string>
    <string name="err_msg_enter_item_price">Enter price of the item</string>
    <string name="err_msg_enter_item_description">Add description to the item</string>
    <string name="err_msg_enter_stock_quantity">"Enter stock quantity "</string>
    <string name="item_uploaded_ok">Your Item has been add successfully</string>
    <string name="no_items_added_yet">There is no items added at the moment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_dashboard_item_found">No Item Found.</string>
    <string name="item_deleted">Item Deleted successfully</string>
    <string name="delete_dialog">Delete</string>
    <string name="delete_dialog_msg">Make Sure that you want delete this item</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="ida_item_details">Item Details</string>
    <string name="ida_item_description">Item Description</string>
    <string name="ida_item_stock">Stock Quantity</string>


</resources>