<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".ui.activities.AddProductActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_add_product_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/app_gradient_color_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingStart="@dimen/toolbar_title_paddingStart"
                android:paddingEnd="0dp"
                android:text="@string/text_item_title"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/toolbar_title_text_size"
                android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_add_product_activity"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <FrameLayout
                    android:id="@+id/fl_product_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/add_item_header_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <ImageView
                        android:id="@+id/iv_product_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorGrey"
                        android:contentDescription="@string/content_description"
                        android:scaleType="fitXY"/>

                <ImageView
                        android:id="@+id/iv_add_update_product"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|bottom"
                        android:contentDescription="@string/content_description"
                        android:padding="@dimen/add_product_icon"
                        android:src="@drawable/ic_baseline_image_24"/>
            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_product_title"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/text_item_title"
                    android:textColorHint="@color/colorPrimarySec"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fl_product_image">

                <com.example.mydeal.utils.MyDealEditText
                        android:id="@+id/et_product_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:padding="@dimen/et_padding"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/et_textSize"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_product_price"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/text_price"
                    android:textColorHint="@color/colorPrimarySec"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/til_product_title">

                <com.example.mydeal.utils.MyDealEditText
                        android:id="@+id/et_product_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:padding="@dimen/et_padding"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/et_textSize"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_product_description"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/text_item_description"
                    android:textColorHint="@color/colorPrimarySec"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/til_product_price">

                <com.example.mydeal.utils.MyDealEditText
                        android:id="@+id/et_product_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:minLines="3"
                        android:padding="@dimen/et_padding"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/et_textSize"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_product_quantity"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/text_stock_number"
                    android:textColorHint="@color/colorPrimarySec"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/til_product_description">

                <com.example.mydeal.utils.MyDealEditText
                        android:id="@+id/et_product_quantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:padding="@dimen/et_padding"
                        android:textColor="@color/colorPrimarySec"
                        android:textSize="@dimen/et_textSize"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.example.mydeal.utils.MyDealButton
                    android:id="@+id/btn_submit_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/button_background"

                    android:gravity="center"
                    android:paddingTop="@dimen/btn_padding"
                    android:paddingBottom="@dimen/btn_padding"
                    android:text="@string/text_add_item"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/btn_textSize"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/til_product_quantity"
                    app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="0.406"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>