<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".ui.activities.ItemDetailsActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_item_details_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/app_gradient_color_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingStart="@dimen/toolbar_title_paddingStart"
                android:paddingEnd="0dp"
                android:text="@string/ida_item_details"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/toolbar_title_text_size"
                android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_item_details_activity">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/iv_product_detail_image"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:background="@color/colorImageViewBG"
                    android:contentDescription="@string/content_description"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                    android:id="@+id/ll_product_details_title_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorGrey"
                    android:orientation="vertical"
                    android:padding="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_product_detail_image">

                <com.example.mydeal.utils.MyDealTextViewBold
                        android:id="@+id/tv_product_details_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorDGrey"
                        android:textSize="16sp"
                        tools:text="Product Title" />

                <com.example.mydeal.utils.MyDealTextView
                        android:id="@+id/tv_product_details_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorDGrey"
                        android:textSize="14sp"
                        tools:text="$100" />
            </LinearLayout>

            <com.example.mydeal.utils.MyDealTextViewBold
                    android:id="@+id/tv_product_details_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/text_item_description"
                    android:textColor="@color/colorDGrey"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll_product_details_title_price" />

            <com.example.mydeal.utils.MyDealTextView
                    android:id="@+id/tv_product_details_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/colorPrimarySec"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_product_details_label"
                    tools:text="This is product details description." />

            <LinearLayout
                    android:id="@+id/ll_product_details_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_product_details_description">

                <com.example.mydeal.utils.MyDealTextViewBold
                        android:id="@+id/tv_product_details_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:text="@string/text_stock_number"
                        android:textColor="@color/colorDGrey"
                        android:textSize="16sp" />

                <com.example.mydeal.utils.MyDealTextView
                        android:id="@+id/tv_product_details_available_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/item_grey_border_background"
                        android:paddingStart="16dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="16sp"
                        android:paddingBottom="5dp"
                        android:textColor="@color/colorPrimarySec"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="5" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>